# emoji-progress-bar

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
